--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "target": "esnext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -26,8 +22,6 @@
       "styles/*": ["styles/*"]
     }
   },
-  "include": [
-    "src", "globals.d.ts",
-  ],
+  "include": ["src", "globals.d.ts", "vite.config.ts"],
   "exclude": ["./node_modules/*"]
 }
