--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^22.15.17",
     "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.4.1",
