--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "openai": "^4.98.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
