--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,8 @@
     "removeComments": false,
     "baseUrl": "src",
     "paths": {
-      "styles/*": ["styles/*"]
+      "styles/*": ["styles/*"],
+      "components/*": ["components/*"]
     }
   },
   "include": ["src", "globals.d.ts", "vite.config.ts"],
