--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint 'src/**/*.{ts,js}'",
     "lint:fix": "eslint 'src/**/*.{ts,js}' --fix",
     "format": "prettier --write 'src/**/*.{ts,js,json,md}'",
-    "start:example3": "ts-node src/example3/app.ts"
+    "start:example3": "ts-node src/example3/app.ts",
+    "start:example5": "ts-node src/example5/app.ts"
   },
   "keywords": [],
   "author": "",
