--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,10 @@
     "format": "prettier --write 'src/**/*.{ts,js,json,md}'",
     "start:example3": "ts-node src/example3/app.ts",
     "start:example5": "ts-node src/example5/app.ts",
-    "start:example6": "ts-node src/example6/app.ts"
+    "start:example6": "ts-node src/example6/app.ts",
+    "example3": "bun src/example3/app.ts",
+    "example5": "bun src/example5/app.ts",
+    "example6": "bun src/example6/app.ts"
   },
   "keywords": [],
   "author": "",
