--- a/backend/package.json
+++ b/backend/package.json
@@ -22,11 +22,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/multer": "^1.4.12",
+    "@types/sharp": "^0.32.0",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "openai": "^4.98.0"
+    "multer": "^2.0.0",
+    "openai": "^4.98.0",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
