--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,13 @@
     "start:example6": "ts-node src/example6/app.ts",
     "start:example8": "ts-node src/example8/app.ts",
     "start:example9": "ts-node src/example9/app.ts",
+    "start:example10": "ts-node src/example10/app.ts",
     "example3": "bun src/example3/app.ts",
     "example5": "bun src/example5/app.ts",
     "example6": "bun src/example6/app.ts",
     "example8": "bun src/example8/app.ts",
-    "example9": "bun src/example9/app.ts"
+    "example9": "bun src/example9/app.ts",
+    "example10": "bun src/example10/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +30,9 @@
   "dependencies": {
     "@types/multer": "^1.4.12",
     "@types/sharp": "^0.32.0",
+    "@types/turndown": "^5.0.5",
     "axios": "^1.9.0",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -36,6 +40,7 @@
     "multer": "^2.0.0",
     "openai": "^4.98.0",
     "sharp": "^0.34.2",
+    "turndown": "^7.2.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
