--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,14 @@
     "start:example8": "ts-node src/example8/app.ts",
     "start:example9": "ts-node src/example9/app.ts",
     "start:example10": "ts-node src/example10/app.ts",
+    "start:example11": "ts-node src/example11/app.ts",
     "example3": "bun src/example3/app.ts",
     "example5": "bun src/example5/app.ts",
     "example6": "bun src/example6/app.ts",
     "example8": "bun src/example8/app.ts",
     "example9": "bun src/example9/app.ts",
-    "example10": "bun src/example10/app.ts"
+    "example10": "bun src/example10/app.ts",
+    "example11": "bun src/example11/app.ts"
   },
   "keywords": [],
   "author": "",
