--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "example12": "bun src/example12/app.ts",
     "split-text-test": "bun src/playgrounds/splitTextPlayground/app.ts",
     "qdrant-test": "bun src/playgrounds/qdrantVectorsPlayground/app.ts",
-    "algolia-test": "bun src/playgrounds/algoliaSearchPlayground/app.ts"
+    "algolia-test": "bun src/playgrounds/algoliaSearchPlayground/app.ts",
+    "sync": "bun src/playgrounds/syncDbQdrantAlgoliaPlayground/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -45,6 +46,7 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.0",
     "express": "^5.1.0",
     "langfuse": "^3.37.2",
     "multer": "^2.0.0",
@@ -60,6 +62,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
+    "bun-types": "^1.2.15",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
