--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "start:example11": "ts-node src/example11/app.ts",
     "start:example12": "ts-node src/example12/app.ts",
     "start:example13": "ts-node src/example13/app.ts",
+    "start:example14": "ts-node src/example14/app.ts",
     "example3": "bun src/example3/app.ts",
     "example5": "bun src/example5/app.ts",
     "example6": "bun src/example6/app.ts",
@@ -28,6 +29,7 @@
     "example11": "bun src/example11/app.ts",
     "example12": "bun src/example12/app.ts",
     "example13": "bun src/example13/app.ts",
+    "example14": "bun src/example14/app.ts",
     "split-text-test": "bun src/playgrounds/splitTextPlayground/app.ts",
     "qdrant-test": "bun src/playgrounds/qdrantVectorsPlayground/app.ts",
     "algolia-test": "bun src/playgrounds/algoliaSearchPlayground/app.ts",
