--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "start:example12": "ts-node src/example12/app.ts",
     "start:example13": "ts-node src/example13/app.ts",
     "start:example14": "ts-node src/example14/app.ts",
+    "start:example15": "ts-node src/example15/app.ts",
+    "start:example16": "ts-node src/example16/app.ts",
     "example3": "bun src/example3/app.ts",
     "example5": "bun src/example5/app.ts",
     "example6": "bun src/example6/app.ts",
@@ -30,6 +32,8 @@
     "example12": "bun src/example12/app.ts",
     "example13": "bun src/example13/app.ts",
     "example14": "bun src/example14/app.ts",
+    "example15": "bun src/example15/app.ts",
+    "example16": "bun src/example16/app.ts",
     "split-text-test": "bun src/playgrounds/splitTextPlayground/app.ts",
     "qdrant-test": "bun src/playgrounds/qdrantVectorsPlayground/app.ts",
     "algolia-test": "bun src/playgrounds/algoliaSearchPlayground/app.ts",
@@ -54,6 +58,7 @@
     "express": "^5.1.0",
     "langfuse": "^3.37.2",
     "multer": "^2.0.0",
+    "neo4j-driver": "^5.28.1",
     "openai": "^4.98.0",
     "sharp": "^0.34.2",
     "turndown": "^7.2.0",
