--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "start:example14": "ts-node src/example14/app.ts",
     "start:example15": "ts-node src/example15/app.ts",
     "start:example16": "ts-node src/example16/app.ts",
+    "start:example17": "ts-node src/example17/app.ts",
     "example3": "bun src/example3/app.ts",
     "example5": "bun src/example5/app.ts",
     "example6": "bun src/example6/app.ts",
@@ -34,6 +35,7 @@
     "example14": "bun src/example14/app.ts",
     "example15": "bun src/example15/app.ts",
     "example16": "bun src/example16/app.ts",
+    "example17": "bun src/example17/app.ts",
     "split-text-test": "bun src/playgrounds/splitTextPlayground/app.ts",
     "qdrant-test": "bun src/playgrounds/qdrantVectorsPlayground/app.ts",
     "algolia-test": "bun src/playgrounds/algoliaSearchPlayground/app.ts",
