--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "start:example16": "ts-node src/example16/app.ts",
     "start:example17": "ts-node src/example17/app.ts",
     "start:example18": "ts-node src/example18/app.ts",
+    "start:example19": "ts-node src/example19/app.ts",
     "example3": "bun src/example3/app.ts",
     "example5": "bun src/example5/app.ts",
     "example6": "bun src/example6/app.ts",
@@ -39,6 +40,7 @@
     "example16": "bun src/example16/app.ts",
     "example17": "bun src/example17/app.ts",
     "example18": "bun src/example18/app.ts",
+    "example19": "bun src/example19/app.ts",
     "split-text-test": "bun src/playgrounds/splitTextPlayground/app.ts",
     "qdrant-test": "bun src/playgrounds/qdrantVectorsPlayground/app.ts",
     "algolia-test": "bun src/playgrounds/algoliaSearchPlayground/app.ts",
